[package]
name = "lb"
version = "0.1.0"
edition = "2024"
description = "A tool to update your school logbook directly from the terminal"

[dependencies]
asky = "0.1.1"
clap = { version = "4.5.51", features = ["derive"] }
confy = "2.0.0"
eyre = "0.6.12"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
